# EdgeFlow

./: .env.example  .gitignore  503_fixes_server.md  CLAUDE.md  DEPLOYMENT.md  DESIGN_STOCK_DETAIL_PHASE_0.md  DESIGN_STOCK_DETAIL_SPEC.md  FT_PANEL_REBUILDS.md  MIGRATION_PLAN.md  PRODUCTION.md  README.md  REBUILD_STATUS.md  Strat_optimizer_tpsl.py  TODO_CMOTS.md  UI_REVAMP_PLAN.md  advanced_screener.py  celery_app.py  celery_config.py  celery_helpers.py  celery_tasks.py  current_schema.md  domain_cutover.md  ecosystem.config.cjs  errors_to_resolve.md  expert_screener.py  gunicorn.conf.py  hosting_plan.md  instrument_list_nse_EQ_SM_BE.csv  main.py  news_scraper.py  option_chain_live.py  option_chain_visualizer.py  package-lock.json  package.json  portfolio_optimizer.py  prewarming.py  pyproject.toml  pytest.ini  rate_limiter.py  realtime_stream.py  (+13 more)
client/: index.html
docs/: EDGEFLOW_UNIVERSE_AUTH_PLAN.md  IIS-WINDOWS-DEPLOYMENT.md  OPENALGO-ARCHITECTURE.md  OPTIONFLOW_AGENT_BRIEF.md  PINESCRIPT_AI_AUTH_BRIEF.md  PLATFORM_INTEGRATION.md  PROD_SIGNIN_FIX_PLAN.md  auth-db-schema.txt  database-indexes.sql  db-audit.md  db-er-diagram.mermaid  db-migration-plan.md  db-schema.txt  db-target-schema.md  db-target-schema.sql  design-guidelines.md  google-oauth-setup.md  redis-setup.md  timescaledb-reference.md  todo.md  verify-performance.sql
logrotate/: tiphub
migrations/: 001_convert_technical_indicators_live.sql  002_optimize_ltp_live.sql  003_add_critical_indexes.sql  004_create_auth_tables.sql  005_add_terms_acceptance.sql  006_subscription_system.sql  007_upgrade_all_users_to_premium.sql  008_admin_analytics_system.sql  009_add_backtest_chart_fields.sql  010_feature_flags_system.sql  011_admin_email_notifications.sql  012_fix_notification_function.sql  013_fix_admin_event_types.sql  014_add_unauthorized_access_event.sql  015_add_missing_auth_event_types.sql  016_add_account_deletion_otp_purpose.sql  017_add_phone_field.sql  018_api_keys_system.sql  019_add_usage_log_user_index.sql  020_add_encrypted_key_column.sql  021_rate_limits_management.sql  022_migrate_v2_to_original.sql  023_add_user_profile_fields.sql  024_multi_platform.sql  025_three_tier_plans.sql  026_coin_wallet.sql  027_payment_intents.sql  029_coin_pricing.sql  030_saved_fundamental_and_portfolio_results.sql  031_user_screener_templates.sql  032_user_screener_templates_type.sql  033_cmots_tickers_extend.sql  034_cmots_raw_cache.sql  035_cmots_normalized.sql  036_cmots_financial_line_report_expand.sql  037_saved_pair_watchlists.sql  038_platform_embed_keys.sql  039_fii_dii_flows.sql  README.md
nginx/: nginx.conf  tiphub-http.conf  tiphub.conf
scripts/: DB_TUNING_IMPLEMENTATION.md  RGX_Auth_full_setup.sql  check_db_config.sh  check_db_config.sql  db_health_check.sql  db_health_monitor.sh  deploy.sh  mint-platform-key.ts  test-coin-gate-3-features.ts  test-coin-gate.ts  test-signup-bonus.ts  verify-shared-db.ts
server/: api_response.py  cmots_accessor.py  cmots_client.py  index.ts  (+43 more)
(+851 files in other folders)
