[project]
name = "Tiphub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "audioop-lts==0.2.2",
    "beautifulsoup4==4.14.2",
    "brotli==1.1.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "dateparser==1.2.2",
    "fastapi==0.120.0",
    "feedparser>=6.0.12",
    "ffmpy==0.6.4",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "frozendict==2.4.6",
    "fsspec==2025.9.0",
    "googlenews==1.6.15",
    "gradio==5.49.1",
    "gradio-client==1.13.3",
    "groovy==0.1.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "mplfinance==0.12.10b0",
    "mpmath==1.3.0",
    "multitasking==0.0.12",
    "networkx==3.5",
    "numpy==2.3.4",
    "orjson==3.11.4",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.3",
    "peewee==3.18.2",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "protobuf==6.33.0",
    "psycopg2-binary==2.9.11",
    "pycparser==2.23",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.10.23",
    "requests==2.31.0",
    "rich==14.2.0",
    "ruff==0.14.2",
    "safehttpx==0.1.7",
    "safetensors==0.6.2",
    "semantic-version==2.10.0",
    "setuptools==78.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "starlette==0.48.0",
    "sympy==1.14.0",
    "tokenizers==0.22.1",
    "tomlkit==0.13.3",
    "torch==2.9.0",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "trio==0.31.0",
    "trio-websocket==0.12.2",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "websocket-client==1.6.1",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "wsproto==1.2.0",
    "yfinance==0.2.66",
    "celery[redis]>=5.3.0",
    "redis>=5.2.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.0",
    "asyncpg>=0.31.0",
    "fyers-apiv3",
    "msgpack",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
override-dependencies = [
    "aiohttp>=3.10.0",
]

